Building maintenance page

--- a/contact.html
+++ b/contact.html
@@ -301,7 +301,7 @@
             <!-- CONTACT-->
             <section class="section p-b-80">
                 <div class="container">
-                    <div class="map-wrapper js-google-map m-b-60" data-makericon="images/icon/marker.png" data-makers="[[&quot;TATEE&quot;, &quot;Now that you visited our website,&lt;br&gt; how about checking out our office too?&quot;, 40.715681, -74.003427]]">
+                    <div class="map-wrapper js-google-map m-b-60" data-makericon="images/icon/marker.png" data-makers="[[&quot;TATEE&quot;, &quot;Now that you visited our website,&lt;br&gt; how about checking out our office too?&quot;, 40.75844192504883,-73.69108581542969]]">
                         <div class="map__holder js-map-holder" id="map" style="height: 370px;"></div>
                     </div>
                     <div class="row no-gutters">
@@ -502,7 +502,7 @@
     <script src="vendor/sweetalert/sweetalert.min.js"></script>
     <script src="vendor/noUiSlider/nouislider.min.js"></script>
     <script src="js/config-contact.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZpvUGmm_OZAW0utJ5uiP79_LLWQPRXsA"></script>
     <script src="js/theme-map.js"></script>
 
     <!-- Main JS-->
