--- a/cooling.html
+++ b/cooling.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Tatee Theme Templates">
 
     <!-- Title Page-->
-    <title>Indoor Air Quality</title>
+    <title>Cooling</title>
 
     <!-- Icons font CSS-->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -303,13 +303,13 @@
                     <div class="rev_slider fullwidthabanner js-rev" data-version="5.4.4" style="display:none" data-rev-layout="fullscreen" data-rev-bullets="false" data-rev-arrows="false">
                         <ul>
                             <li class="rev-item rev-item-1" data-transition="crossfade">
-                                <img class="rev-slidebg" src="images/PLS-Mechanical-UV-Germicidal-Purifier 1.jpg" alt="Master Slider 01" />
+                                <img class="rev-slidebg" src="images/Hero-Background.png" alt="Master Slider 01" />
                                 <h4 class="tp-caption tp-resizeme rev-text-1" data-frames="[{&quot;delay&quot;:400,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="['left']" data-y="['middle']" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-128, -118, -150, -130, -130]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="['auto']" data-height="[&quot;auto&quot;]"
-                                data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="400" data-fontsize="[11, 11, 14, 16, 16]" data-textalign="[left, left, left, center, center]">Indoor Air Quality</h4>
+                                data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="400" data-fontsize="[11, 11, 14, 16, 16]" data-textalign="[left, left, left, center, center]">Cooling</h4>
                                 <h2 class="tp-caption tp-resizeme rev-text-2" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:-50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-45, -40, 0, 0, 0]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[1170, 930, 690, 510, 576]" data-height="[&quot;auto&quot;]"
-                                data-lineheight="[60, 58, 54, 38, 36]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="700" data-fontsize="[48, 42, 46, 32, 32]" data-textalign="[left, left, left, left, left]">Germicidal UV</h2>
+                                data-lineheight="[60, 58, 54, 38, 36]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="700" data-fontsize="[48, 42, 46, 32, 32]" data-textalign="[left, left, left, left, left]">Air Conditioning</h2>
                                 <p class="tp-caption tp-resizeme" data-frames="[{&quot;delay&quot;:0,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="[left]" data-y="[center]" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[70, 70, 100, 80, 70]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="[800,800,690,510,576]" data-height="[&quot;auto&quot;]"
                                 data-lineheight="[30, 30, 26, 20, 20]" data-whitespace="normal" data-color="#ebebeb" data-fontweight="400" data-fontsize="[13, 13, 14, 15, 15]" data-textalign="[left, left, left, left, left]">Read More.</p>
@@ -324,6 +324,36 @@
                 </div>
             </section>
             <!-- END SLIDER-->
+
+            <section class="section-pp pp-table pp-easing" data-background="dark" data-title="about us">
+                <!-- PAGE LINE-->
+                <div class="page-line">
+                    <div class="container">
+                        <div class="page-line__inner">
+                            <div class="page-col"></div>
+                            <div class="page-col"></div>
+                            <div class="page-col"></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- END PAGE LINE-->
+                <div class="mouse-wheel-wrap">
+                    <a class="mouse-wheel js-mouse-wheel" href="#">
+                        <span class="mouse-wheel__inner"></span>
+                    </a>
+                    <span class="ti-angle-double-down mouse-wheel__down"></span>
+                </div>
+                <div class="rev_slider_wrapper">
+                    <div class="rev_slider fullwidthabanner js-rev" data-version="5.4.4" style="display:none" data-rev-layout="fullscreen" data-rev-bullets="false" data-rev-arrows="false">
+                        <ul>
+                            <li class="rev-item rev-item-1" data-transition="crossfade">
+                                <img class="rev-slidebg" src="images/Cooling-Background 1.png" alt="Master Slider 01" />
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
             <!-- SECTION-->
             <section class="section-pp pp-easing section-pp--pad " data-background="light" data-title="why choose us">
@@ -430,7 +460,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/PLS-Mechanical-UV-Germicide 1.jpg" alt="Space Speaker Studio" />
+                                            <img src="images/PLS-Mechanical-Heat-Distribution-Forced-Air-System 2.jpg" alt="Space Speaker Studio" />
                                         </a>
                                     </figure>
                                     <span class="add">Kharkiv , ukraine</span>
@@ -438,10 +468,8 @@
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Germicidal UV</h2>
-                                        <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold. </p>
-                                            <p>&emsp; • 100% Ozone-free</p>
-                                            <p>&emsp; • Ductless compatible</p>
+                                        <h2 class="title-3">Central Air Conditioning</h2>
+                                        <p class="media__text">Room-by-room temperature control with Ductless Mini-split Solutions for Air Conditioning. It’s like a central air system except superior in every way and also mess-free.</p>
                                         <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
                                             <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                         </a>
@@ -461,7 +489,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/Bacterias.png" alt="Lunisolar Homestay" />
+                                            <img src="images/PLS-Mechanical-Heat-Distribution-Forced-Air-System 3.jpg" alt="Lunisolar Homestay" />
                                         </a>
                                     </figure>
                                     <span class="add">Perth , Australia</span>
@@ -469,72 +497,10 @@
                                     <div class="media__content">
                                         <div class="pointer"></div>
                                         <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Active Sanitization</h2>
+                                        <h2 class="title-3">Ventilation Systems for Cooling</h2>
                                         <p class="media__text">Inexpensively avoid heat buildup with any of the following solutions:</p>
-                                        <p>&emsp; • Combine a whole house fans with ceiling fans and window fans to circulate the air in your home</p>
-                                        <p>&emsp; • Repurpose the ducts of your central heating and cooling system to provide whole house cooling.</p>
-                                        <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
-                                            <i class="zmdi zmdi-arrow-right ic-arrow"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </section>
-                <!-- END PROJECT-->
-
-                <!-- PROJECT-->
-                <section class="project-section">
-                    <div class="wrap wrap--w1790">
-                        <div class="container-fluid">
-                            <article class="media-project-3">
-                                <div class="media__body">
-                                    <figure class="media__img">
-                                        <a href="project-detail-1.html">
-                                            <img src="images/PLS-Mechanical-HEPA-Filters 2.png" alt="filters" />
-                                        </a>
-                                    </figure>
-                                    <span class="add">Bilbao , Spain</span>
-                                    <span class="year">2018</span>
-                                    <div class="media__content">
-                                        <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Filters and Purifiers</h2>
-                                        <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold.</p>
-                                        <p>&emsp; • 100% Ozone-free</p>
-                                        <p>&emsp; • Ductless compatible</p>
-                                        <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
-                                            <i class="zmdi zmdi-arrow-right ic-arrow"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </article>
-                        </div>
-                    </div>
-                </section>
-                <!-- END PROJECT-->
-
-                <!-- PROJECT-->
-                <section class="project-section">
-                    <div class="wrap wrap--w1790">
-                        <div class="container-fluid">
-                            <article class="media-project-3 right">
-                                <div class="media__body">
-                                    <figure class="media__img">
-                                        <a href="project-detail-1.html">
-                                            <img src="images/PLS-Mechanical-UV-Germicide 2.jpg" alt="Tourliver University" />
-                                        </a>
-                                    </figure>
-                                    <span class="add">samara , rusia</span>
-                                    <span class="year">2018</span>
-                                    <div class="media__content">
-                                        <div class="pointer"></div>
-                                        <h4 class="title-sub title-sub--c8">architecture</h4>
-                                        <h2 class="title-3">Humidity Control</h2>
-                                        <p class="media__text">Best-in-class, Maximum-intensity ultraviolet light that reduces the concentrations of microorganisms such as pathogens, mildew, bacteria, viruses, and mold.</p>
-                                        <p>&emsp; • 100% Ozone-free</p>
-                                        <p>&emsp; • Ductless compatible</p>
+                                        <p>&emsp; •Combine a whole house fans with ceiling fans and window fans to circulate the air in your home;</p>
+                                        <p>&emsp; •Repurpose the ducts of your central heating and cooling system to provide whole house cooling.</p>
                                         <a class="au-btn au-btn--arrow" href="project-detail-1.html">See Project
                                             <i class="zmdi zmdi-arrow-right ic-arrow"></i>
                                         </a>
