Complete maintenance page

--- a/heating.html
+++ b/heating.html
@@ -303,7 +303,7 @@
                     <div class="rev_slider fullwidthabanner js-rev" data-version="5.4.4" style="display:none" data-rev-layout="fullscreen" data-rev-bullets="false" data-rev-arrows="false">
                         <ul>
                             <li class="rev-item rev-item-1" data-transition="crossfade">
-                                <img class="rev-slidebg" src="images/Hero-Background (1).jpg" alt="Master Slider 01" />
+                                <img class="rev-slidebg" src="images/heating-bg.jpg" alt="Master Slider 01" />
                                 <h4 class="tp-caption tp-resizeme rev-text-1" data-frames="[{&quot;delay&quot;:400,&quot;speed&quot;:1200,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:800,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;auto:auto;&quot;,&quot;ease&quot;:&quot;Power3.easeInOut&quot;}]"
                                 data-x="['left']" data-y="['middle']" data-hoffset="[0, 0, 0, 0, 0]" data-voffset="[-128, -118, -150, -130, -130]" data-paddingleft="[0, 0, 0, 0, 15]" data-paddingright="[0, 0, 0, 0, 15]" data-width="['auto']" data-height="[&quot;auto&quot;]"
                                 data-whitespace="[nowrap, nowrap, nowrap, nowrap, nowrap]" data-color="#fff" data-fontweight="400" data-fontsize="[11, 11, 14, 16, 16]" data-textalign="[left, left, left, center, center]">Heating</h4>
@@ -347,7 +347,7 @@
                     <div class="rev_slider fullwidthabanner js-rev" data-version="5.4.4" style="display:none" data-rev-layout="fullscreen" data-rev-bullets="false" data-rev-arrows="false">
                         <ul>
                             <li class="rev-item rev-item-1" data-transition="crossfade">
-                                <img class="rev-slidebg" src="images/Heating-background 1.png" alt="Master Slider 01" />
+                                <img class="rev-slidebg" src="images/heating-interactive-bg.png" alt="Master Slider 01" />
 
                             </li>
                         </ul>
@@ -489,7 +489,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/PLS-Mechanical-halogen-or-infrared-heater-electric-resistant-heating 1.png" alt="Space Speaker Studio" />
+                                            <img src="images/infrared-heater.png" alt="Space Speaker Studio" />
                                         </a>
                                     </figure>
                                     <span class="add">Perth , Australia</span>
@@ -517,7 +517,7 @@
                                 <div class="media__body">
                                     <figure class="media__img">
                                         <a href="project-detail-1.html">
-                                            <img src="images/Boiler.jpg" alt="Lunisolar Homestay" />
+                                            <img src="images/boiler.jpg" alt="Lunisolar Homestay" />
                                         </a>
                                     </figure>
                                     <span class="add">Bilbao , Spain</span>
