--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                         <a href="indoor-air-quality.html">Indoor Air Quality</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Maintenance</a>
+                                        <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li class="menu-item">
                                         <a href="home-vertical-slide-video-background.html">Commercial</a>
@@ -231,7 +231,7 @@
                                         <a href="indoor-air-quality.html">Indoor Air Quality</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide.html">Maintenance</a>
+                                        <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li class="menu-item">
                                         <a href="home-vertical-slide-video-background.html">Commercial</a>
@@ -323,7 +323,7 @@
                     <div class="media__body">
                         <h5 class="media__sub-title title-sub">Value Maintenance</h5>
                         <h3 class="media__title">
-                            <a href="home-vertical-slide.html">Service Repair</a>
+                            <a href="maintenance.html">Service Repair</a>
                         </h3>
                         <a class="link" href="home-vertical-slide.html">Learn more 
                             <i class="zmdi zmdi-arrow-right"></i>
