--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -44,7 +44,7 @@
         <!-- HEADER-->
         <header id="header">
             <div class="header header-2 d-none d-lg-block">
-                <div class="header__bar bg-overlay bg-overlay--p85" id="header-bg-default"> 
+                <div class="header__bar bg-overlay bg-overlay--p85" id="header-default-bg"> 
                     <div class="wrap wrap--w1790">
                         <div class="container-fluid">
                             <div class="header__content">
