--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                         <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide-video-background.html">Commercial</a>
+                                        <a href="commercial.html">Commercial</a>
                                     </li>
                                 </ul>
                             </li>
@@ -234,7 +234,7 @@
                                         <a href="maintenance.html">Maintenance</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a href="home-vertical-slide-video-background.html">Commercial</a>
+                                        <a href="commercial.html">Commercial</a>
                                     </li>
                                 </ul>
                             </li>
@@ -325,7 +325,7 @@
                         <h3 class="media__title">
                             <a href="maintenance.html">Service Repair</a>
                         </h3>
-                        <a class="link" href="home-vertical-slide.html">Learn more 
+                        <a class="link" href="maintenance.html">Learn more 
                             <i class="zmdi zmdi-arrow-right"></i>
                         </a>
                     </div>
@@ -336,9 +336,9 @@
                     <div class="media__body">
                         <h5 class="media__sub-title title-sub">Value Engineering</h5>
                         <h3 class="media__title">
-                            <a href="home-vertical-slide-video-background.html">Commercial HVAC</a>
+                            <a href="commercial.html">Commercial HVAC</a>
                         </h3>
-                        <a class="link" href="home-vertical-slide-video-background.html">Learn more 
+                        <a class="link" href="commercial.html">Learn more 
                             <i class="zmdi zmdi-arrow-right"></i>
                         </a>
                     </div>
