Build interactive cooling and heating diagram

--- a/heating.html
+++ b/heating.html
@@ -283,7 +283,14 @@
                         <ul>
                             <li class="rev-item rev-item-1" data-transition="crossfade">
                                 <img class="rev-slidebg" src="images/heating-interactive-bg.png" alt="Master Slider 01" />
+                                <div id="cassette-heater" class="interactiveHover"></div>
+                                <div id="duct-air-handler" class="interactiveHover"></div>
+                                <div id="wall-mounted-heating-cooling" class="interactiveHover"></div>
+                                <div id="floor-mounted" class="interactiveHover"></div>
+                                <div id="multi-zone-heating-cooling" class="interactiveHover"></div>
+                                <div id="horizontal-ducted" class="interactiveHover"></div>
 
+                                <img src="images/heating-interactive-bg.png" alt="interactiveOverlay" id="interactiveOverlay" />
                             </li>
                         </ul>
                     </div>
@@ -569,6 +576,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAEmXgQ65zpsjsEAfNPP9mBAz-5zjnIZBw"></script>
     <script src="js/theme-map.js"></script>
     <script src="js/config-contact.js"></script>
+    <script src="js/config-heating-interactive.js"></script>
 
     <!-- Main JS-->
     <script src="js/global.js"></script>
